--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -13,13 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Updated to v3
+        uses: actions/checkout@v3  # Using the latest version of actions/checkout
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'adoptopenjdk'
+          distribution: 'temurin'  # Use the Temurin distribution
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v2
         with:
@@ -28,6 +29,6 @@ jobs:
 
       - name: SonarCloud Scan
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Ensure SONAR_TOKEN is added as a secret in your GitHub repository
         run: |
           sonar-scanner -Dsonar.projectKey=Boopathy-senseai_codeguru_development -Dsonar.organization=boopathy-senseai
