--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -27,8 +27,19 @@ jobs:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
 
+      - name: Install Sonar Scanner
+        run: |
+          # Download Sonar Scanner
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+          # Unzip the downloaded file
+          unzip sonar-scanner-cli-4.6.2.2472-linux.zip
+          # Move it to /usr/local so it's available on the PATH
+          sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
+          # Add Sonar Scanner to PATH
+          echo "export PATH=/usr/local/sonar-scanner/bin:\$PATH" >> $GITHUB_ENV
+
       - name: SonarCloud Scan
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}  # Ensure SONAR_TOKEN is added as a secret in your GitHub repository
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           sonar-scanner -Dsonar.projectKey=Boopathy-senseai_codeguru_development -Dsonar.organization=boopathy-senseai
