--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -13,13 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3  # Using the latest version of actions/checkout
+        uses: actions/checkout@v3
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'temurin'  # Use the Temurin distribution
+          distribution: 'temurin'
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v2
@@ -29,18 +29,16 @@ jobs:
 
       - name: Install Sonar Scanner
         run: |
-          # Download Sonar Scanner
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
-          # Unzip the downloaded file
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
-          # Move it to /usr/local so it's available on the PATH
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
 
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          # Add Sonar Scanner to PATH within this session
           export PATH="/usr/local/sonar-scanner/bin:$PATH"
-          # Run the Sonar Scanner command
-          sonar-scanner -Dsonar.projectKey=Boopathy-senseai_codeguru_development -Dsonar.organization=boopathy-senseai
+          sonar-scanner \
+            -Dsonar.projectKey=Boopathy-senseai_codeguru_development \
+            -Dsonar.organization=boopathy-senseai \
+            -Dsonar.host.url=https://sonarcloud.io
