--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -36,15 +36,11 @@ jobs:
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
 
-      - name: SonarCloud Scan
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.2-8/x64
+      - name: Force Java 17 for SonarScanner
         run: |
-          # Verify Java version to make sure we are using Java 17
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.2-8/x64
+          export PATH=$JAVA_HOME/bin:$PATH
           java -version
-          
-          # Update PATH and run sonar-scanner
           export PATH="/usr/local/sonar-scanner/bin:$PATH"
           sonar-scanner \
             -Dsonar.projectKey=Boopathy-senseai_codeguru_development \
