--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,24 +24,24 @@ jobs:
       - name: Verify Java version
         run: java -version
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-
-      - name: Install Sonar Scanner
+      - name: Install SonarScanner
         run: |
+          # Download and extract SonarScanner
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
+
+      - name: Add SonarScanner to PATH
+        run: |
+          echo "export PATH=/usr/local/sonar-scanner/bin:$PATH" >> ~/.bashrc
+          source ~/.bashrc
+          sonar-scanner -v
 
       - name: Force Java 17 for SonarScanner execution
         run: |
           export JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.2-8/x64
           export PATH=$JAVA_HOME/bin:$PATH
           java -version
-          # Ensure sonar-scanner uses Java 17 by explicitly setting the Java version before running
           export SONAR_SCANNER_OPTS="-Djava.home=$JAVA_HOME"
           sonar-scanner \
             -Dsonar.projectKey=Boopathy-senseai_codeguru_development \
