--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -31,10 +31,9 @@ jobs:
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
 
-      - name: Add SonarScanner to PATH
+      - name: Add SonarScanner to PATH for current session
         run: |
-          echo "export PATH=/usr/local/sonar-scanner/bin:$PATH" >> ~/.bashrc
-          source ~/.bashrc
+          export PATH=/usr/local/sonar-scanner/bin:$PATH
           sonar-scanner -v
 
       - name: Force Java 17 for SonarScanner execution
