--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -34,11 +34,10 @@ jobs:
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
           echo "SonarScanner installed at /usr/local/sonar-scanner"
 
-      - name: Add SonarScanner to PATH
+      - name: Add SonarScanner to PATH in the current shell
         run: |
-          echo "export PATH=/usr/local/sonar-scanner/bin:$PATH" >> ~/.bashrc
-          source ~/.bashrc
-          sonar-scanner -v
+          export PATH=/usr/local/sonar-scanner/bin:$PATH
+          sonar-scanner -v  # Check if sonar-scanner is installed and working
 
       - name: Force Java 17 for SonarScanner execution
         run: |
