--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -29,28 +29,29 @@ jobs:
           # Install dependencies
           sudo apt-get update
           sudo apt-get install -y unzip wget
-          
+
           # Download and install SonarScanner
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
 
-          # Add SonarScanner to PATH
+          # Add SonarScanner to PATH for the current shell
           echo "export PATH=/usr/local/sonar-scanner/bin:$PATH" >> $GITHUB_ENV
 
       - name: Verify SonarScanner installation
         run: |
+          # Ensure sonar-scanner is in PATH and verify installation
           sonar-scanner -v
 
       - name: Set JAVA_HOME for SonarScanner
         run: |
-          export JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.2-8/x64
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
           export PATH=$JAVA_HOME/bin:$PATH
           java -version
-          
+
           # Set SonarScanner options to use Java 17
           export SONAR_SCANNER_OPTS="-Djava.home=$JAVA_HOME"
-          
+
           # Run SonarScanner for the project
           sonar-scanner \
             -Dsonar.projectKey=Boopathy-senseai_codeguru_development \
