--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -35,8 +35,8 @@ jobs:
           unzip sonar-scanner-cli-4.6.2.2472-linux.zip
           sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
 
-          # Add SonarScanner to PATH for the current shell
-          echo "export PATH=/usr/local/sonar-scanner/bin:$PATH" >> $GITHUB_ENV
+          # Add SonarScanner to the PATH for all future steps
+          echo "PATH=/usr/local/sonar-scanner/bin:$PATH" >> $GITHUB_ENV
 
       - name: Verify SonarScanner installation
         run: |
