--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -10,45 +10,59 @@ on:
 
 jobs:
   sonarcloud:
-    name: SonarCloud Analysis
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
+          distribution: 'temurin'
 
-      - name: Set up SonarScanner
-        run: |
-          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
-          unzip sonar-scanner.zip -d /usr/local
-          export PATH=$PATH:/usr/local/sonar-scanner-4.6.2.2472-linux/bin
+      - name: Verify Java version
+        run: java -version
 
-      - name: Debugging: Print environment variables and check for missing properties
+      - name: Install SonarScanner
         run: |
+          # Install dependencies
+          sudo apt-get update
+          sudo apt-get install -y unzip wget
+
+          # Download and install SonarScanner
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+          unzip sonar-scanner-cli-4.6.2.2472-linux.zip
+          sudo mv sonar-scanner-4.6.2.2472-linux /usr/local/sonar-scanner
+
+          # Add SonarScanner to the PATH for all future steps
+          echo "PATH=/usr/local/sonar-scanner/bin:$PATH" >> $GITHUB_ENV
+
+      - name: Verify SonarScanner installation
+        run: |
+          # Ensure sonar-scanner is in PATH and verify installation
+          sonar-scanner -v
+
+      - name: Set JAVA_HOME for SonarScanner
+        run: |
+          export JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
+          export PATH=$JAVA_HOME/bin:$PATH
+          java -version
+
+          # Set SonarScanner options to use Java 17
+          export SONAR_SCANNER_OPTS="-Djava.home=$JAVA_HOME"
+
+      - name: Run SonarScanner
+        run: |
+          # Debugging: Print environment variables and check for missing properties
           echo "SonarScanner Environment Variables:"
           export JAVA_HOME=/opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
           export PATH=$JAVA_HOME/bin:$PATH
           export SONAR_SCANNER_OPTS="-Djava.home=$JAVA_HOME"
 
-          # Verify Java Version
-          echo "JAVA_HOME: $JAVA_HOME"
-          java -version
-
-      - name: Run SonarScanner with debug option
-        run: |
+          
+          # Run SonarScanner with debug option
           sonar-scanner -X \
             -Dsonar.projectKey=Boopathy-senseai_codeguru_development \
             -Dsonar.organization=boopathy-senseai \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Djava.home=$JAVA_HOME
-
-      - name: Upload SonarCloud analysis results
-        uses: SonarSource/sonarcloud-github-action@v1
-        with:
-          organization: boopathy-senseai
-          projectKey: Boopathy-senseai_codeguru_development
+            -Dsonar.host.url=https://sonarcloud.io
