--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -10,24 +10,43 @@ on:
 
 jobs:
   sonarcloud:
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Set up Java 17
+      # Check out the repository
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      # Set up JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
           java-version: '17'
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # Cache SonarCloud dependencies
+      - name: Cache SonarCloud dependencies
+        uses: actions/cache@v3
         with:
-          args: >
-            -Dsonar.projectKey=Boopathy-senseai_codeguru_development
-            -Dsonar.organization=boopathy-senseai
-            -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.sources=.
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonarcloud-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-sonarcloud-
+
+      # Run SonarCloud Analysis
+      - name: Run SonarCloud Analysis
+        uses: SonarSource/sonarcloud-github-action@v1
+        with:
+          args: -Dsonar.projectKey=Boopathy-senseai_codeguru_development -Dsonar.organization=boopathy-senseai -Dsonar.host.url=https://sonarcloud.io -Dsonar.sources=.
+        env:
+          JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
+          JAVA_HOME_17_X64: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      # Optional: Uncomment if you want to upload code coverage or test results
+      # - name: Upload code coverage to SonarCloud
+      #   if: success()
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: code-coverage
+      #     path: path/to/coverage/report
