--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -18,12 +18,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up JDK 17
+      # Set up JDK 17 with a distribution
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-
+          distribution: 'temurin'  # Add the distribution (e.g., 'temurin' for Eclipse Temurin)
+          
       # Cache SonarCloud dependencies
       - name: Cache SonarCloud dependencies
         uses: actions/cache@v3
