--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -18,13 +18,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Set up JDK 17 with a distribution
+      # Set up JDK 17 (use Temurin)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'  # Add the distribution (e.g., 'temurin' for Eclipse Temurin)
+          distribution: 'temurin'  # Ensure using Java 17 (Eclipse Temurin)
           
+      # Ensure Java version is correct (for debugging)
+      - name: Check Java Version
+        run: java -version
+
       # Cache SonarCloud dependencies
       - name: Cache SonarCloud dependencies
         uses: actions/cache@v3
@@ -41,13 +45,4 @@ jobs:
           args: -Dsonar.projectKey=Boopathy-senseai_codeguru_development -Dsonar.organization=boopathy-senseai -Dsonar.host.url=https://sonarcloud.io -Dsonar.sources=.
         env:
           JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
-          JAVA_HOME_17_X64: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      # Optional: Uncomment if you want to upload code coverage or test results
-      # - name: Upload code coverage to SonarCloud
-      #   if: success()
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: code-coverage
-      #     path: path/to/coverage/report
