--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,4 +1,4 @@
-name: SonarCloud Analysis
+name: Build and Analyze
 
 on:
   push:
@@ -9,40 +9,45 @@ on:
       - main
 
 jobs:
-  sonarcloud:
-    name: SonarCloud Analysis
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the repository
-      - name: Checkout Code
+      # Step 1: Check out the code from the repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up JDK 17 (use Temurin)
-      - name: Set up JDK 17
+      # Step 2: Set up Java 17
+      - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'  # Ensure using Java 17 (Eclipse Temurin)
-          
-      # Ensure Java version is correct (for debugging)
-      - name: Check Java Version
+          java-version: 17
+          distribution: temurin
+          java-package: jdk
+
+      # Step 3: Verify Java version (Optional)
+      - name: Verify Java version
         run: java -version
 
-      # Cache SonarCloud dependencies
-      - name: Cache SonarCloud dependencies
+      # Step 4: Cache Maven dependencies
+      - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonarcloud-${{ hashFiles('**/pom.xml') }}
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-sonarcloud-
+            ${{ runner.os }}-maven-
 
-      # Run SonarCloud Analysis
-      - name: Run SonarCloud Analysis
-        uses: SonarSource/sonarcloud-github-action@v1
+      # Step 5: Build the project (adjust according to your build tool)
+      - name: Build with Maven
+        run: mvn clean install
+
+      # Step 6: SonarCloud analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
         with:
           args: -Dsonar.projectKey=Boopathy-senseai_codeguru_development -Dsonar.organization=boopathy-senseai -Dsonar.host.url=https://sonarcloud.io -Dsonar.sources=.
         env:
-          JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          JAVA_HOME: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
+          JAVA_HOME_17_X64: /opt/hostedtoolcache/Java_Temurin-Hotspot_jdk/17.0.13-11/x64
